Changed routes for train a little
